--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         					При нагреве точек человек ощущает жжение. В качестве измеряемого параметра выступает время, прошедшее от начала нагревания до появления жжения. Так, определяя болевую чувствительность сорока точек на руках и ногах, оценивается состояние всего организма.
         				</p>
         			</div>
-        			<img class="img-fluid w-50" src="#" alt="">
+                    <div>
+                        <img class="img-fluid" src="img/top.jpg" alt="">
+                    </div>
         		</div>
         	</div>
     </section>
@@ -104,10 +106,7 @@
                 Предлагаем ознакомиться с ходом диагностики
             </h1>
             <div class="ratio ratio-16x9">
-                <video controls>
-                    <source src="video/runo_iv.mp4" type="video/mp4">
-                    Видео не поддерживается.
-                </video >
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/D6IH6iX6Ph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
