fix text and image

--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
         <div class="container">
         		<div>
         			<h1 class="mb-5 text-light">ДИАГНОСТИКА ВСЕГО ОРГАНИЗМА по методу "РУНО"</h1>
+                    <div>
+                        <img class="img-fluid mb-5" src="img/top.jpg" alt="">
+                    </div>
         			<div class="text-justify lead">
         				<p>
         					Технология РУНО (от сокращения РУки-НОги) основана на определении тепловой чувствительности измерительных точек, расположенных на концах пальцев. Нервные окончания пальцев рук и стоп связаны практически со всеми сегментами спинного мозга, а те, в свою очередь, связаны с внутренними органами.
         				</p>
-        				<p>
+        				<p class="m-0">
         					При нагреве точек человек ощущает жжение. В качестве измеряемого параметра выступает время, прошедшее от начала нагревания до появления жжения. Так, определяя болевую чувствительность сорока точек на руках и ногах, оценивается состояние всего организма.
         				</p>
         			</div>
-                    <div>
-                        <img class="img-fluid" src="img/top.jpg" alt="">
-                    </div>
         		</div>
         	</div>
     </section>
@@ -457,7 +457,6 @@
                     </h1>
                     <div class="text-justify lead">
                         <p>
-                            Диагностика РУНО безвредна. Она не  связана с воздействием электрического тока или излучения. Невозможность проведения:
                             <ol>
                                 <li>Обратитесь к человеку, который дал вам  информацию о РУНО</li>
                                 <li>Он уточнит у специалиста и подберёт удобное время для записи на диагностику</li>
